<resources>
    <string name="app_name">HairStyling By NT</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="Email">Email</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="user_Name">User Name</string>
    <string name="home">Home</string>
    <string name="shopping">Shopping</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="booking">Booking</string>
    <string name="information">Information</string>
    <string name="gallery">Gallery</string>
    <string name="price_list">Price List</string>
    <string name="available">Available</string>
    <string name="_9_00_9_30">9:00 - 9:30</string>
    <string name="time_slot_successfull">Time slot is updated successfully!</string>
    <string name="error">Error</string>
    <string name="are_you_sure_barber">Are you sure you want to block this slot?</string>
    <string name="are_you_sure_client">Are you sure you want to schedule appointment in this time?</string>
    <string name="alarm">Alram!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="staff">Staff</string>
</resources>