<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/HomeColor"
    android:orientation="vertical"
    tools:context=".fragment_home">


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/layout_user_information"
        android:weightSum="4"
        android:padding="8dp"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_account_circle_white_24dp"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_email"
                android:text="@string/Email"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TextView>
            <TextView
                android:id="@+id/txt_member_type"
                android:text="@string/user"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="4"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_booking"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:orientation="vertical">

                <ImageView
                    android:src="@drawable/ic_event_number_2_note_24dp"
                    android:layout_width="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="50dp"/>
                <TextView
                    android:text="@string/booking"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/textCardSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_information"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:orientation="vertical">

                <ImageView
                    android:src="@drawable/ic_info_black_number_2_24dp"
                    android:layout_width="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="50dp"/>
                <TextView
                    android:text="@string/information"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/textCardSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_price_list"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:orientation="vertical">

                <ImageView
                    android:src="@drawable/ic_price_list_black_24dp"
                    android:layout_width="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="50dp"/>
                <TextView
                    android:text="Price List"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/textCardSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_gallery"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:orientation="vertical">

                <ImageView
                    android:src="@drawable/ic_gallery_camera_black_24dp"
                    android:layout_width="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="50dp"/>
                <TextView
                    android:text="@string/gallery"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/textCardSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


</LinearLayout>