<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"

    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    tools:context=".HomeActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_bck_7"
            android:orientation="vertical"
            tools:context=".fragment_home">


            <LinearLayout
                android:id="@+id/layout_user_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="4">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_account_circle_white_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/Email"
                        android:textColor="@android:color/white"
                        android:textSize="22sp">

                    </TextView>

                    <TextView
                        android:id="@+id/txt_member_type"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/user"
                        android:textColor="@android:color/white"
                        android:textSize="22sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="4">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_booking"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp">


                    <Button
                        android:id="@+id/booking_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="71dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_event_number_2_note_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/booking"
                            android:id="@+id/booking_txt"
                            android:textSize="@dimen/textCardSize" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_information"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp">

                    <Button
                        android:id="@+id/information_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="71dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_info_black_number_2_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/information"
                            android:textSize="@dimen/textCardSize" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_price_list"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp">

                    <Button
                        android:id="@+id/PriceList_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="71dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_price_list_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/price_list"
                            android:textSize="@dimen/textCardSize" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_gallery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp">

                    <Button
                        android:id="@+id/gallery_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="71dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_gallery_camera_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/gallery"
                            android:textSize="@dimen/textCardSize" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </LinearLayout>
    </FrameLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/home_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</RelativeLayout>